fix styling so that body covers the entire screen, change styling of jumbotron

--- a/app/assets/stylesheets/left_hand_nav.css
+++ b/app/assets/stylesheets/left_hand_nav.css
@@ -67,13 +67,12 @@
 
 .jumbotron {
     position: fixed;
-    height: 600px;
     top: 50px;
     left: 239px;
     width: 100%;
     text-align: center;
     align-content: center;
-    display: grid;
+    display: flex;
     z-index: -1;
 }
 
